--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<li><a href="#features">Services</a></li>
 					<li><a href="#about">About Us</a></li> 
 					<li><a href="#ourWorks">Work</a></li>
-					<li><a href="img_wth_filerting.html">Products</a></li>
+					<li><a href=img_wth_filerting.html>Products</a></li>
 					<li><a href="#contact">Contact Us</a></li>
 				</ul>
 			</nav>
